assets/themes/hancom/static/css/social.css
/*
 * Following/subscribing
 */
.social{
	margin:2em 0 1.5em;
	list-style:none;
	padding:0;	
	text-align:center;
}
.social li{
	margin:0 10px 0 0;
	padding:0;
	display:inline-block;
}
.social li:last-of-type{
	margin:0;
}
.social-icon{
	display:block;
	width:64px;
	height:64px;
	
}
.social-rss{
	background:url(img/rss.png) left top no-repeat;
}
.social-twitter{
	background:url(img/twitter.png) left top no-repeat;
}

/*
 * Footer links for sharing/subscribing
 */
.pg-foot-wrap .social{
	float:right;
	margin:0;
	padding:0;
}
.pg-foot-wrap .social-icon{
	width:42px;
	height:42px;
	background-size:42px;
}

@media all and (min-width:1024px){
	
}

/*
 * Sharing
 */
.share{
	list-style:none;
	margin:0;
	padding:0;
	
}
.share li{
	float:left;
	
}

.share-facebook{
	padding:0;
	margin:15px 0 0;
	
}
@media all and (min-width:748px){
	.share-facebook{
		margin:2px 0 0;
	}
}
.share-twitter{
	padding:0;
	margin:0 15px 0 0;
}
.share-plus{
	padding:0px;
	margin:2px 15px 0 0;
	
}

